tests/ui/feature-gates/feature-gate-inline_const_pat.stderr
error[E0658]: inline-const in pattern position is experimental
  --> $DIR/feature-gate-inline_const_pat.rs:2:9
   |
LL |     let const { () } = ();
   |         ^^^^^
   |
   = note: see issue #76001 <https://github.com/crablang/crablang/issues/76001> for more information
   = help: add `#![feature(inline_const_pat)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0658`.
